kustomize/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: api-deployment-demo
  labels:
    app: api-demo
    component: nginx
spec:
  selector:
    app: api-demo
    component: nginx
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8443
      nodePort: 30443
      protocol: TCP
  type: LoadBalancer # Kind cluster will use NodePort behavior
